# skarb-code

./: .gitignore  .gitlab-ci.yml  LICENSE.md  PL_EN_dict.opf  README.md  dict_helpers.py  make_dict.py  make_dictionary.py  mise.toml  pl_dict_roadmap.md  pyproject.toml  requirements.txt  test_dict_helpers.py
polish_kindle_dict/: .gitignore  make_dict.py  morfeusz2-1.9.17-cp36-cp36m-linux_x86_64.whl
